@@ -1,3 +1,4 @@
+  - Add DumperObject for getting at the underlying obj
   - create DwarnF for formatting Dumper'd output
   - Create Ddie for die'ing output
 
